--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:23</td>   <td>0</td> <td title="&lt;&lt;DeltaDrive.endFrameWork()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;endFrameWork</td> 
+<tr bgcolor="61f5df">  <td>16/09/03 18:02:23</td>   <td>0</td> <td title="&lt;&lt;BaseDriver.endFrameWork()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;endFrameWork</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:00</td>   <td>-23140</td> <td title="&gt;&gt;DeltaDrive.initFramework()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;initFramework</td> 
+<tr bgcolor="61f5df">  <td>16/09/03 18:02:02</td>   <td>-20599</td> <td title="&gt;&gt;BaseDriver.initFramework()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;initFramework</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:01</td>   <td>-22157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeltaDrive.launchApp()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;launchApp</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:04</td>   <td>-19570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeltaDrive.launchApp()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:12</td>   <td>-11026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeltaDrive.launchApp()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;launchApp</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:14</td>   <td>-9529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeltaDrive.launchApp()[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:12</td>   <td>-11046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeltaDrive.quitApp(org.testng.ITestResult)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;quitApp</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:14</td>   <td>-9549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeltaDrive.quitApp(org.testng.ITestResult)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;quitApp</td> 
 <td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:23</td>   <td>-263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeltaDrive.quitApp(org.testng.ITestResult)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;quitApp</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:23</td>   <td>-276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeltaDrive.quitApp(org.testng.ITestResult)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">&lt;&lt;quitApp</td> 
 <td>&nbsp;</td>  <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:12</td>   <td>-11061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeltaDrive.testScenarios(java.lang.String, java.lang.String)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">testScenarios</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:14</td>   <td>-9565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeltaDrive.testScenarios(java.lang.String, java.lang.String)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">testScenarios</td> 
   <td>main@684874119</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>16/09/03 17:03:23</td>   <td>-268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeltaDrive.testScenarios(java.lang.String, java.lang.String)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">testScenarios</td> 
+<tr bgcolor="7471b5">  <td>16/09/03 18:02:23</td>   <td>-282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeltaDrive.testScenarios(java.lang.String, java.lang.String)[pri:0, instance:delta.main.DeltaDrive@4520ebad]">testScenarios</td> 
   <td>main@684874119</td>   <td></td> </tr>
 </table>
